# p2wlan

./: .gitignore  Cargo.toml  LICENSE  P2PNet-Design.md  PRODUCT.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
client/cli/: Cargo.toml
client/cli/src/: main.rs
client/crypto/: Cargo.toml
client/crypto/src/: aead.rs  dh.rs  error.rs  hash.rs  hkdf.rs  lib.rs  noise.rs  sign.rs
client/daemon/: Cargo.toml
client/daemon/src/: acl.rs  config.rs  control.rs  dataplane.rs  diagnostics.rs  dns.rs  error.rs  gateway_mapping.rs  lib.rs  main.rs  peer.rs  port_mapping.rs  relay.rs  route.rs  tasks.rs  transport.rs  traversal_history.rs  udp.rs
client/nat/: Cargo.toml
client/nat/src/: client.rs  detection.rs  error.rs  ice.rs  lib.rs  punch.rs  stun.rs
client/relay/: Cargo.toml
client/relay/src/: auth.rs  client.rs  error.rs  lib.rs  protocol.rs  server.rs  tls.rs
client/tun/: Cargo.toml
client/tun/src/: config.rs  device.rs  error.rs  interface.rs  lib.rs  mock.rs  packet.rs
client/tun/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
client/tun/tests/: integration.rs
client/wireguard/: Cargo.toml
client/wireguard/src/: error.rs  handshake.rs  lib.rs  session.rs  types.rs
client/wireguard/tests/: two_node_direct.rs
docs/: AI_IMPLEMENTATION_PROMPT.md  ENGINE_OPTIMIZATION_PLAN.md  MAC_TESTING.md  NEXT_PHASE_IMPLEMENTATION_PROMPT.md  PHASE_A1_RELAY_HARDENING_PROMPT.md  PHASE_A2_RELAY_SECURITY_PROMPT.md  PROTOCOL.md  RELEASE_PACKAGING.md  RESEARCH_NOTES.md  ROADMAP.md  WINDOWS_TESTING.md
docs/adr/: 0001-nat-06-bounded-udp-socket-pool.md
proto/: network.proto
scripts/: control-smoke.sh  generate-icons.py  install-linux-cli.sh  mac-remote-smoke.sh  package-macos.sh  tun-ping-smoke.sh  windows-remote-smoke.ps1
server/: Dockerfile  go.mod  go.sum  main.go  main_test.go
server/api/: api.go  api_test.go  relay_catalog.go  relay_ticket.go  signal_notifier.go
server/auth/: auth.go  relay_ticket.go
server/database/: database.go  database_test.go  stage2_test.go
server/relay/: main.go  main_test.go
server/signaling/: signaling.go  signaling_test.go
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: control_auth.rs  daemon_manager.rs  lib.rs  main.rs  permissions.rs  tray.rs
src/components/: ControlAuthPanel.tsx  DeviceEditorDialog.tsx  Layout.tsx  QuitConfirmationDialog.tsx  StatusPill.tsx  WindowChrome.tsx
src/hooks/: useClientStatus.ts  useWindowLifecycle.ts
src/lib/: clientApi.ts
src/pages/: DashboardPage.tsx  DiagnosticsPage.tsx  LoginPage.tsx  NodesPage.tsx  OnboardingPage.tsx  SettingsPage.tsx  TunnelsPage.tsx
src/types/: client.ts
