[workspace]
members = [
    "client/tun",
    "client/crypto",
    "client/wireguard",
    "client/nat",
    "client/relay",
    "client/daemon",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
authors = ["P2PNet Team"]
license = "MIT"
repository = "https://github.com/yhan-sun/p2wlan"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }

# Serialization
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling & logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking
socket2 = "0.5"

# Crypto
rand = "0.8"
rand_core = "0.6"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
blake2 = "0.10"
hex = "0.4"
zeroize = { version = "1", features = ["zeroize_derive"] }
subtle = "2"

# FFI
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
