[package]
name = "p2wlan-desktop"
version = "0.1.0"
description = "p2wlan desktop client console"
authors = ["P2PNet Team"]
license = "MIT"
repository = "https://github.com/yhan-sun/p2wlan"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json"] }
which = "6.0"
url = "2.5"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
