[package]
name = "p2pnet-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives for P2PNet (X25519, ChaCha20-Poly1305, BLAKE2s, Noise)"

[dependencies]
thiserror = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
blake2 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = "2"
zeroize = { workspace = true }
subtle = { workspace = true }
