[package]
name = "p2pnet-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "P2PNet client daemon"

[dependencies]
p2pnet-tun = { path = "../tun" }
p2pnet-crypto = { path = "../crypto" }
p2pnet-wireguard = { path = "../wireguard" }
p2pnet-nat = { path = "../nat" }
p2pnet-relay = { path = "../relay" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true }
