[package]
name = "p2pnet-nat"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NAT traversal (STUN/ICE/UDP Hole Punching) for P2PNet"

[dependencies]
p2pnet-crypto = { path = "../crypto" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
if-addrs = "0.13"
