[package]
name = "p2pnet-tun"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-platform TUN/Wintun/utun virtual network interface for P2PNet"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

# Linux specific
[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }
nix = { version = "0.29", features = ["net", "ioctl", "fs"] }

# Windows specific
[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.8"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Networking_WinSock",
] }

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }
nix = { version = "0.29", features = ["net", "ioctl", "fs"] }

[dev-dependencies]
tokio = { workspace = true }
